3-kubernetes/labs/manifest/2-create_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment
  namespace: k8s-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-deployment
  template:
    metadata:
      labels:
        app: k8s-deployment
    spec:
      containers:
        - name: nginx
          image: nginx
